--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Hello Symfony UX Turbo!{% endblock %}</title>
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
@@ -11,9 +11,19 @@
 
         {% block javascripts %}
             {#{{ encore_entry_script_tags('app') }}#}
+            <script type="module" src="https://cdn.skypack.dev/@hotwired/turbo"></script>
         {% endblock %}
     </head>
     <body>
+
+    {% include('partials/_nav.html.twig') %}
+
+    <hr>
+
+    <main>
+        {% include('partials/_flash_message.html.twig') %}
         {% block body %}{% endblock %}
+    </main>
+
     </body>
 </html>
