--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,12 +6,21 @@
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
+            {{ encore_entry_link_tags('app') }}
+            <style>
+                .turbo-progress-bar {
+                    height: 15px;
+                    background-color: orange;
+                }
+            </style>
         {% endblock %}
 
         {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
-            <script type="module" src="https://cdn.skypack.dev/@hotwired/turbo"></script>
+            {{ encore_entry_script_tags('app') }}
+            <script type="module">
+                import * as Turbo from 'https://cdn.skypack.dev/@hotwired/turbo';
+                Turbo.setProgressBarDelay(500);
+            </script>
         {% endblock %}
     </head>
     <body>
